index.css
* {
  box-sizing: border-box;
}

:root {
  --light: whitesmoke;
  --dark: #080808;
  --highlight: #d68fd6;
  --highlight: #006989;
  --box-shadow: orange;
}

html,
body {
  margin: 0;
  padding: 0;
}

body {
  font-family: "Asap", sans-serif;
  background: var(--light);
}
.dark-body {
  background: var(--dark);
}

.header {
  background-color: var(--light);
  padding: 2em;
  width: 100%;
  display: flex;
  box-shadow: 2px 2px 4px 0px var(--dark);
}

.dark-header {
  background-color: var(--dark);
  padding: 2em;
  width: 100%;
  display: flex;
  box-shadow: 2px 2px 4px 0px var(--light);
}

.post-container {
  padding: 1em 2em;
}

#post,
#post1,
#post2,
button,
img {
  -webkit-box-shadow: 2px 2px 4px 0px var(--dark);
  box-shadow: 2px 2px 4px 0px var(--dark);
  border-radius: 5px;
}
img,
button,
h1,
label,
#post,
#post1,
#post2 {
  transition: all 0.2s ease-in-out;
}

img:hover,
button:hover,
label:hover,
#post:hover,
#post1:hover,
#post2:hover,
#dark-post:hover {
  transform: scale(1.05);

  box-shadow: 2px 2px 20px var(--box-shadow);
}

h1:hover {
  text-shadow: 2px 2px 20px var(--box-shadow);
}

#post,
#post1,
#post2 {
  background: var(--light);
  padding: 1em;
  display: grid;
  grid-template-columns: 1fr minmax(50px, 250px);
  min-width: 400px;
  max-width: 700px;
  margin: 2em auto;
  color: var(--dark);
}

#dark-post {
  background: var(--dark);
  padding: 1em;
  display: grid;
  grid-template-columns: 1fr minmax(50px, 250px);
  min-width: 400px;
  max-width: 700px;
  margin: 2em auto;
  color: var(--light);
  -webkit-box-shadow: 2px 2px 4px 0px var(--light);
  box-shadow: 2px 2px 4px 0px var(--light);
  border-radius: 5px;
}

.content {
  display: grid;
  grid-template-rows: 20px 1fr;
  padding: 0 1em 0 0;
}

img {
  width: 100%;
  max-height: 300px;
}

h1 {
  color: var(--dark);
  margin: 0;
  font-size: 3rem;
}

.dark-h1 {
  color: var(--light);
  margin: 0;
  font-size: 3rem;
}

h2 {
  margin-top: 0;
  font-size: 1.5rem;
}

button {
  cursor: pointer;
  font-family: inherit;
  border: none;
  padding: 1em 2em;
  font-weight: 700;
  justify-self: start;
  background-color: var(--dark);
  color: var(--light);
}

.dark-button {
  cursor: pointer;
  font-family: inherit;
  border: none;
  padding: 1em 2em;
  font-weight: 700;
  justify-self: start;
  background-color: var(--light);
  color: var(--dark);
}

.toggle {
  height: 0;
  width: 0;
  visibility: hidden;
  margin-left: auto;
  background-color: var(--dark);
}

#label {
  width: 50px;
  height: 30px;
  border-radius: 15px;
  position: relative;
  cursor: pointer;
  margin: 1em;
  background-color: var(--dark);
}

#dark-label {
  width: 50px;
  height: 30px;
  border-radius: 15px;
  position: relative;
  cursor: pointer;
  margin: 1em;
  background-color: var(--light);
}

label::after {
  content: "";
  position: absolute;
  width: 24px;
  height: 24px;
  border-radius: 50%;
  top: 2px;
  left: 22px;
  transition: 0.5s;
  background-color: var(--light);
}

.toggle:checked + label::after {
  transform: translate(-18px);
  background-color: var(--dark);
}

/* DARK COLORS */

.dark,
.dark > h1,
.dark {
  background-color: var(--dark);
  color: var(--light);
}

.dark button {
  background-color: var(--light);
  color: var(--dark);
}

